tests/ui/issues/issue-50264-inner-deref-trait/result-as_deref.rs
fn main() {
    let _result = &Ok(42).as_deref();
//~^ ERROR the method
}
